Various bugs with fade in/out with the VSE (Sequencer) #73056

Closed
opened 2020-01-12 06:04:02 +01:00 by Nick Gammon · 23 comments

System Information
Operating system: Linux-4.15.0-39-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GTX 780/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.77

Blender Version
Broken: version: 2.82 (sub 6), branch: master, commit date: 2020-01-10 15:30, hash: 1cb938ef2c

Short description of error
Fade in/out (opacity) change fails in various ways as described below.

Exact steps for others to reproduce the error

  • Make a new Blender Video Editing project.
  • Add a Color strip and change its duration to 100 frames.
  • Change the colour of the colour strip to make it obvious when it fades in and out.
  • RH-click the strip and select Fade -> Fade In And Out
  • Move the playhead to frame 3. Although the opacity is supposed to be 0.020 (see properties) it is shown in the preview window at full opacity.

{F8271854, size=full}

  • Changing the blend mode from "Cross" (the default) to "Replace" fixes that. Changing back to "Cross", it stays fixed.
  • The effect seems intermittent. Re-doing the above steps, this time I have full opacity displayed at frame 1:

{F8271872, size=full}

  • However correct opacity at frame 2:

{F8271877, size=full}

  • Now if I delete the curve in the graph editor, it seems to sort-of "remember" the opacity, as it fades up and down still, however the opacity shown in the properties window remains at 0.005 for some reason. Despite what the opacity property value is, the opacity now fades up and down at the start, and occasionally flickers from full to no opacity (for example, at frame 44):

{F8271883, size=full}

  • Interestingly, frame 44 looks like the one frame that wasn't preloaded for some reason (see earlier screenshot) so this may be related.
  • If I try to recover by RH-clicking on the strip and selecting Clear Fade I get this error message:
Traceback (most recent call last):
  File "/home/nick/blender-2.82-1cb938ef2c92-linux-glibc217-x86_64/2.82/scripts/startup/bl_operators/sequencer.py", line 154, in execute
    fcurves = context.scene.animation_data.action.fcurves
AttributeError: 'NoneType' object has no attribute 'fcurves'

location: <unknown location>:-1
  • My guess is that there is some sort of memory caching issue here.
  • The issue isn't related to the Color Strip as such. I originally noticed the effect with a video sequence, however since it can be reproduced with a Color Strip, that is easier to reproduce than supplying a video file.

Thanks for any assistance!

fade in out bug.blend

**System Information** Operating system: Linux-4.15.0-39-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GTX 780/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.77 **Blender Version** Broken: version: 2.82 (sub 6), branch: master, commit date: 2020-01-10 15:30, hash: `1cb938ef2c` **Short description of error** Fade in/out (opacity) change fails in various ways as described below. **Exact steps for others to reproduce the error** * Make a new Blender Video Editing project. * Add a Color strip and change its duration to 100 frames. * Change the colour of the colour strip to make it obvious when it fades in and out. * RH-click the strip and select Fade -> Fade In And Out * Move the playhead to frame 3. Although the opacity is supposed to be 0.020 (see properties) it is shown in the preview window at full opacity. {[F8271854](https://archive.blender.org/developer/F8271854/Blender_bug_-_opacity_ignored.png), size=full} * Changing the blend mode from "Cross" (the default) to "Replace" fixes that. Changing back to "Cross", it stays fixed. * The effect seems intermittent. Re-doing the above steps, this time I have full opacity displayed at frame 1: {[F8271872](https://archive.blender.org/developer/F8271872/Blender_bug_-_full_opacity_at_frame_1.png), size=full} * However correct opacity at frame 2: {[F8271877](https://archive.blender.org/developer/F8271877/Blender_bug_-_correct_opacity_at_frame_2.png), size=full} * Now if I delete the curve in the graph editor, it seems to sort-of "remember" the opacity, as it fades up and down still, however the opacity shown in the properties window remains at 0.005 for some reason. Despite what the opacity property value is, the opacity now fades up and down at the start, and occasionally flickers from full to no opacity (for example, at frame 44): {[F8271883](https://archive.blender.org/developer/F8271883/Blender_bug_-_deleted_fcurve.png), size=full} * Interestingly, frame 44 looks like the one frame that wasn't preloaded for some reason (see earlier screenshot) so this may be related. * If I try to recover by RH-clicking on the strip and selecting **Clear Fade** I get this error message: ``` Traceback (most recent call last): File "/home/nick/blender-2.82-1cb938ef2c92-linux-glibc217-x86_64/2.82/scripts/startup/bl_operators/sequencer.py", line 154, in execute fcurves = context.scene.animation_data.action.fcurves AttributeError: 'NoneType' object has no attribute 'fcurves' location: <unknown location>:-1 ``` * My guess is that there is some sort of memory caching issue here. * The issue isn't related to the Color Strip as such. I originally noticed the effect with a video sequence, however since it can be reproduced with a Color Strip, that is easier to reproduce than supplying a video file. Thanks for any assistance! [fade in out bug.blend](https://archive.blender.org/developer/F8271897/fade_in_out_bug.blend)
Author

Added subscriber: @nickgammon

Added subscriber: @nickgammon

#75070 was marked as duplicate of this issue

#75070 was marked as duplicate of this issue

#75039 was marked as duplicate of this issue

#75039 was marked as duplicate of this issue

#74897 was marked as duplicate of this issue

#74897 was marked as duplicate of this issue

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Confirmed, thanks for the detailed report.

Confirmed, thanks for the detailed report.

Added subscribers: @GDQuest, @tintwotin

Added subscribers: @GDQuest, @tintwotin

Tagging @GDQuest on this one though the problems may be lower level than using the API.

Tagging @GDQuest on this one though the problems may be lower level than using the API.
Author

I am trying to track down and reproduce further problems I am having with playback of strips. My impression is that it is more of a caching issue than the specifics of the fade-in/fade-out, however as described above that is an easy way of reproducing it. I am not referring here to the proxy files, in the example above I wasn't using them.

Having said that, the Python error message if you try to Clear Fade does indeed seem to be a fade issue.

I am trying to track down and reproduce further problems I am having with playback of strips. My impression is that it is more of a caching issue than the specifics of the fade-in/fade-out, however as described above that is an easy way of reproducing it. I am not referring here to the proxy files, in the example above I wasn't using them. Having said that, the Python error message if you try to Clear Fade does indeed seem to be a fade issue.
Nathan Lovato was assigned by Campbell Barton 2020-01-15 02:10:28 +01:00

Removed subscriber: @tintwotin

Removed subscriber: @tintwotin

Added subscriber: @iss

Added subscriber: @iss

Not sure if @GDQuest would be able to take this on, in such case I will grab this

Not sure if @GDQuest would be able to take this on, in such case I will grab this

Added subscriber: @nexxio

Added subscriber: @nexxio

I can confirm that this bug affects the audio strips too, and is more than the crossfade sound, if you add a keyframe to the volume or pitch properties it visually adds the keyframe and the curves but the animation does not work, if you put a keyframe in volume at 1, and other keyframe forward at 0 it adds the keyframes but the whole audio strip will stay with volume at 0 and if you delete the keyframes and put then again it stays the same no matter what value you put, is like if the keyframes don't work in the vse.
I tested it in the latest build -blender-2.83-f06a6e92bc5e-linux64-

I can confirm that this bug affects the audio strips too, and is more than the crossfade sound, if you add a keyframe to the volume or pitch properties it visually adds the keyframe and the curves but the animation does not work, if you put a keyframe in volume at 1, and other keyframe forward at 0 it adds the keyframes but the whole audio strip will stay with volume at 0 and if you delete the keyframes and put then again it stays the same no matter what value you put, is like if the keyframes don't work in the vse. I tested it in the latest build -blender-2.83-f06a6e92bc5e-linux64-

Added subscriber: @PranavjitVirdi

Added subscriber: @PranavjitVirdi
Added subscribers: @tangentstorm, @tintwotin, @EitanSomething

Added subscribers: @rimpotche, @mano-wii

Added subscribers: @rimpotche, @mano-wii

After fixing animation bug I have wrongly assumed, that all merged reports have the same issue. I will split these reports now, sorry for noise.

After fixing animation bug I have wrongly assumed, that all merged reports have the same issue. I will split these reports now, sorry for noise.

Added subscriber: @Eisfuchs

Added subscriber: @Eisfuchs

Removed subscriber: @tintwotin

Removed subscriber: @tintwotin

This issue was referenced by 67a822e086

This issue was referenced by 67a822e08684ac7c89f915766920b9ff1c9f5328

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.90 milestone 2023-02-08 16:27:56 +01:00
Sign in to join this conversation.
7 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#73056
No description provided.